--- a/navigation.html
+++ b/navigation.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-static-top">
 	<div class="container">
 
-		<a href ng-click="pageCtrl.setPage(1)" class="navbar-brand">Administration</a>
+		<a href ng-click="pageCtrl.setPage(1)" class="navbar-brand">Business Slagelse Administration</a>
 
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-class="{ active: pageCtrl.isSet(1)}">
