--- a/content.html
+++ b/content.html
@@ -1,17 +1,16 @@
 <div class="container">
-    <div class="jumbotron" ng-show="pageCtrl.isSet(1)">
-		<h2>Forside</h2>
+    <div ng-show="pageCtrl.isSet(1)" ng-include="'page/forside.html'" >
 	</div>
 	
-	<div class="jumbotron" ng-show="pageCtrl.isSet(2)">
-		<h2>Tilbud</h2>
+	<div ng-show="pageCtrl.isSet(2)" ng-include="'page/tilbudoversigt.html'">
 	</div>
 
-	<div class="jumbotron" ng-show="pageCtrl.isSet(3)">
-		<h2>Min butik</h2>
+	<div ng-show="pageCtrl.isSet(3)" ng-include="'page/minbutik.html'">
 	</div>
 
-	<div class="jumbotron" ng-show="pageCtrl.isSet(4)">
-		<h2>Hjælp</h2>
+	<div ng-show="pageCtrl.isSet(4)" ng-include="'page/hjelp.html'">
+	</div>
+
+	<div ng-show="pageCtrl.isSet(5)" ng-include="'page/oprettilbud.html'">
 	</div>
 </div>
