added dropdown shit

--- a/navigation.html
+++ b/navigation.html
@@ -6,12 +6,12 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-class="{ active: pageCtrl.isSet(1)}">
 				<a href ng-click="pageCtrl.setPage(1)">Forside</a></li>
-				<li class="dropdown">
+				<li ng-class="{ active: pageCtrl.isSet(2) || pageCtrl.isSet(5)}" class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tilbud <b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><a href ng-click="pageCtrl.setPage(2)">Oversigt</a></li>
+						<li ng-class="{ active: pageCtrl.isSet(2)}"><a href ng-click="pageCtrl.setPage(2)">Oversigt</a></li>
 						<li class="divider"></li>
-						<li><a href ng-click="pageCtrl.setPage(5)">Opret tilbud</a></li>
+						<li ng-class="{ active: pageCtrl.isSet(5)}"><a href ng-click="pageCtrl.setPage(5)">Opret tilbud</a></li>
 					</ul>
 				</li>
 				<li ng-class="{ active: pageCtrl.isSet(3)}">
