--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<!-- import AngularJS -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
-		<script type="text/javascript" src="app.js"></script>
-		<!-- Import bootstrap default stylesheet -->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<!-- Import AngularJS application -->
+		<script type="text/javascript" src="js/app.js"></script>
+		<!-- Import bootstrap stylesheet -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		<!-- Import bootstrap theme -->
+		<link href="css/theme.css" rel="stylesheet">
+		<!-- Import jquery -->
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<!-- Import bootstrap script -->
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	</head>
 	<body ng-controller="PageController as pageCtrl">
 		<!-- Navigation -->
@@ -15,9 +22,5 @@
 
         <!-- Page content -->
         <site-content></site-content>
-
-		<!-- Import jquery and bootstrap -->
-		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-		<script src="js/bootstrap.js"></script>
 	</body>
 </html>
