--- a/navigation.html
+++ b/navigation.html
@@ -6,19 +6,21 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li ng-class="{ active: pageCtrl.isSet(1)}">
 				<a href ng-click="pageCtrl.setPage(1)">Forside</a></li>
-				<li ng-class="{ active: pageCtrl.isSet(2) || pageCtrl.isSet(5)}" class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tilbud <b class="caret"></b></a>
-					<ul class="dropdown-menu">
-						<li ng-class="{ active: pageCtrl.isSet(2)}"><a href ng-click="pageCtrl.setPage(2)">Oversigt</a></li>
-						<li class="divider"></li>
-						<li ng-class="{ active: pageCtrl.isSet(5)}"><a href ng-click="pageCtrl.setPage(5)">Opret tilbud</a></li>
-					</ul>
-				</li>
-				<li ng-class="{ active: pageCtrl.isSet(3)}">
-					<a href ng-click="pageCtrl.setPage(3)">Min butik</a></li>
-					<li ng-class="{ active: pageCtrl.isSet(4)}">
-						<a href ng-click="pageCtrl.setPage(4)">Hjælp</a></li>
-					</ul>
+			<li ng-class="{ active: pageCtrl.isSet(2) || pageCtrl.isSet(5)}" class="dropdown">
+				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tilbud <b class="caret"></b></a>
+				<ul class="dropdown-menu">
+					<li ng-class="{ active: pageCtrl.isSet(2)}"><a href ng-click="pageCtrl.setPage(2)">Oversigt</a></li>
+					<li class="divider"></li>
+					<li ng-class="{ active: pageCtrl.isSet(5)}"><a href ng-click="pageCtrl.setPage(5)">Opret tilbud</a></li>
+				</ul>
+			</li>
+			<li ng-class="{ active: pageCtrl.isSet(3)}">
+				<a href ng-click="pageCtrl.setPage(3)">Min butik</a></li>
+			<li ng-class="{ active: pageCtrl.isSet(4)}">
+				<a href ng-click="pageCtrl.setPage(4)">Hjælp</a></li>
+			<li ng-class="{ active: pageCtrl.isSet(6)}">
+				<a href ng-click="pageCtrl.setPage(6)"><span class="glyphicon glyphicon-log-out"></span></a></li>
+		</ul>
 
-				</div>
-			</div>
+	</div>
+</div>
