Tilføjede nogle småting
- Alle sider fader nu ind (dog ikke ud)
- lidt rettelser til tilbudsoversigten

--- a/content.html
+++ b/content.html
@@ -1,16 +1,16 @@
 <div class="container">
-    <div ng-show="pageCtrl.isSet(1)" ng-include="'page/forside.html'" >
+    <div class="content-animation" ng-show="pageCtrl.isSet(1)" ng-include="'page/forside.html'">
 	</div>
 	
-	<div ng-show="pageCtrl.isSet(2)" ng-include="'page/tilbudoversigt.html'">
+	<div class="content-animation" ng-show="pageCtrl.isSet(2)" ng-include="'page/tilbudoversigt.html'">
 	</div>
 
-	<div ng-show="pageCtrl.isSet(3)" ng-include="'page/minbutik.html'">
+	<div class="content-animation" ng-show="pageCtrl.isSet(3)" ng-include="'page/minbutik.html'">
 	</div>
 
-	<div ng-show="pageCtrl.isSet(4)" ng-include="'page/hjelp.html'">
+	<div class="content-animation" ng-show="pageCtrl.isSet(4)" ng-include="'page/hjelp.html'">
 	</div>
 
-	<div ng-show="pageCtrl.isSet(5)" ng-include="'page/oprettilbud.html'">
+	<div class="content-animation" ng-show="pageCtrl.isSet(5)" ng-include="'page/oprettilbud.html'">
 	</div>
 </div>
