--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 	<head>
 		<title>Bootstrap with Angular example</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<!-- import AngularJS -->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+		<!-- Import AngularJS -->
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+		<!-- Import AngularJS Animate -->
+		<script type="text/javascript" src="js/angular-animate.min.js"></script>
 		<!-- Import AngularJS application -->
-		<script type="text/javascript" src="js/app.js"></script>
+		<script src="js/app.js"></script>
 		<!-- Import bootstrap stylesheet -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 		<!-- Import bootstrap theme -->
@@ -15,12 +17,16 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<!-- Import bootstrap script -->
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<!-- Import custom styles -->
+		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body ng-controller="PageController as pageCtrl">
 		<!-- Navigation -->
         <site-navigation></site-navigation>
 
         <!-- Page content -->
-        <site-content></site-content>
+        <div class="sitecontent">
+        	<site-content></site-content>
+        </div>
 	</body>
 </html>
