--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Import custom styles -->
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
-	<body ng-controller="PageController as pageCtrl">
+	<body class="well" ng-controller="PageController as pageCtrl">
 		<!-- Navigation -->
         <site-navigation></site-navigation>
 
