--- a/navigation.html
+++ b/navigation.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top">
+<div class="navbar navbar-default">
 	<div class="container">
 
 		<a href ng-click="pageCtrl.setPage(1)" class="navbar-brand">Business Slagelse Administration</a>
