--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<!-- Import bootstrap script -->
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<!-- Import custom styles -->
+		<link href="css/hjelp.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body class="well" ng-controller="PageController as pageCtrl">
