Tilbudoversigt css fil

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<!-- Import custom styles -->
 		<link href="css/hjelp.css" rel="stylesheet">
+		<link href="css/tilbudoversigt.css" rel="stylesheet">
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body class="well" ng-controller="PageController as pageCtrl">
