Slet page inkluderet

--- a/content.html
+++ b/content.html
@@ -13,4 +13,7 @@
 
 	<div class="content-animation" ng-show="pageCtrl.isSet(5)" ng-include="'page/oprettilbud.html'">
 	</div>
+
+	<div class="content-animation" ng-show"pageCtrl.isSet(6)" ng-include="'page/slettilbud.html'">
+	</div>
 </div>
