--- a/navigation.html
+++ b/navigation.html
@@ -18,8 +18,8 @@
 				<a href ng-click="pageCtrl.setPage(3)">Min butik</a></li>
 			<li ng-class="{ active: pageCtrl.isSet(4)}">
 				<a href ng-click="pageCtrl.setPage(4)">Hjælp</a></li>
-			<li ng-class="{ active: pageCtrl.isSet(6)}">
-				<a href ng-click="pageCtrl.setPage(6)"><span class="glyphicon glyphicon-log-out"></span></a></li>
+			<li>
+				<a href ><span class="glyphicon glyphicon-log-out"></span></a></li>
 		</ul>
 
 	</div>
