rettelse til content

--- a/content.html
+++ b/content.html
@@ -14,6 +14,6 @@
 	<div class="content-animation" ng-show="pageCtrl.isSet(5)" ng-include="'page/oprettilbud.html'">
 	</div>
 
-	<div class="content-animation" ng-show"pageCtrl.isSet(6)" ng-include="'page/slettilbud.html'">
+	<div class="content-animation" ng-show="pageCtrl.isSet(6)" ng-include="'page/slettilbud.html'">
 	</div>
 </div>
