--- a/navigation.html
+++ b/navigation.html
@@ -5,44 +5,56 @@
 
 		<ul class="nav navbar-nav navbar-right">
 
+			<!-- Generelt -->
 			<li ng-class="{ active: pageCtrl.isSet(1)}">
 				<a href ng-click="pageCtrl.setPage(1)">Forside</a></li>
 
-			<li ng-class="{ active: pageCtrl.isSet(2) || pageCtrl.isSet(5)}" class="dropdown">
+			<!-- Tilbud -->
+			<li ng-class="{ active: pageCtrl.isSet(20) || pageCtrl.isSet(21) || pageCtrl.isSet(22) || pageCtrl.isSet(23)}" class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tilbud <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li ng-class="{ active: pageCtrl.isSet(2)}"><a href ng-click="pageCtrl.setPage(2)">Oversigt</a></li>
+					<li ng-class="{ active: pageCtrl.isSet(20)}">
+						<a href ng-click="pageCtrl.setPage(20)">Oversigt</a></li>
 					<li class="divider"></li>
-					<li ng-class="{ active: pageCtrl.isSet(5)}"><a href ng-click="pageCtrl.setPage(5)">Opret tilbud</a></li>
+					<li ng-class="{ active: pageCtrl.isSet(21)}">
+						<a href ng-click="pageCtrl.setPage(21)">Opret tilbud</a></li>
 				</ul>
 			</li>
 
-			<li ng-class="{ active: pageCtrl.isSet(2) || pageCtrl.isSet(5)}" class="dropdown">
+			<!-- Butik -->
+			<li ng-class="{ active: pageCtrl.isSet(40) || pageCtrl.isSet(41) || pageCtrl.isSet(42) || pageCtrl.isSet(43) || pageCtrl.isSet(44)}" class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Butikker <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li ng-class="{ active: pageCtrl.isSet(2)}"><a href ng-click="pageCtrl.setPage(2)">Oversigt</a></li>
+					<li ng-class="{ active: pageCtrl.isSet(40)}">
+						<a href ng-click="pageCtrl.setPage(40)">Oversigt</a></li>
 					<li class="divider"></li>
-					<li ng-class="{ active: pageCtrl.isSet(5)}"><a href ng-click="pageCtrl.setPage(5)">Opret butik</a></li>
+					<li ng-class="{ active: pageCtrl.isSet(41)}">
+						<a href ng-click="pageCtrl.setPage(41)">Opret butik</a></li>
 				</ul>
 			</li>
 
-			<li ng-class="{ active: pageCtrl.isSet(2) || pageCtrl.isSet(5)}" class="dropdown">
+			<!-- Tags -->
+			<li ng-class="{ active: pageCtrl.isSet(60) || pageCtrl.isSet(61) || pageCtrl.isSet(62) || pageCtrl.isSet(63)}" class="dropdown">
 				<a href="#" class="dropdown-toggle" data-toggle="dropdown">Tags <b class="caret"></b></a>
 				<ul class="dropdown-menu">
-					<li ng-class="{ active: pageCtrl.isSet(2)}"><a href ng-click="pageCtrl.setPage(2)">Oversigt</a></li>
+					<li ng-class="{ active: pageCtrl.isSet(60)}">
+						<a href ng-click="pageCtrl.setPage(60)">Oversigt</a></li>
 					<li class="divider"></li>
-					<li ng-class="{ active: pageCtrl.isSet(5)}"><a href ng-click="pageCtrl.setPage(5)">Opret tag</a></li>
+					<li ng-class="{ active: pageCtrl.isSet(61)}">
+						<a href ng-click="pageCtrl.setPage(61)">Opret tag</a></li>
 				</ul>
 			</li>
 
+			<!-- Butik -->
+			<li ng-class="{ active: pageCtrl.isSet(44)}">
+				<a href ng-click="pageCtrl.setPage(44)">Min butik</a></li>
+
+			<!-- Generelt -->
+			<li ng-class="{ active: pageCtrl.isSet(2)}">
+				<a href ng-click="pageCtrl.setPage(2)">Hjælp</a></li>
+
 			<li ng-class="{ active: pageCtrl.isSet(3)}">
-				<a href ng-click="pageCtrl.setPage(3)">Min butik</a></li>
-
-			<li ng-class="{ active: pageCtrl.isSet(4)}">
-				<a href ng-click="pageCtrl.setPage(4)">Hjælp</a></li>
-
-			<li>
-				<a href ><span class="glyphicon glyphicon-log-out"></span></a></li>
+				<a href ng-click="pageCtrl.setPage(3)"><span class="glyphicon glyphicon-log-out"></span></a></li>
 
 		</ul>
 
