--- a/content.html
+++ b/content.html
@@ -14,6 +14,9 @@
 	<div class="content-animation" ng-show="pageCtrl.isSet(21)" ng-include="'page/oprettilbud.html'">
 	</div>
 
+	<div class="content-animation" ng-show="pageCtrl.isSet(22)" ng-include="'page/redigertilbud.html'">
+	</div>
+
 	<div class="content-animation" ng-show="pageCtrl.isSet(23)" ng-include="'page/slettilbud.html'">
 	</div>
 
