Sider oprettet (Se filoversigt)

--- a/content.html
+++ b/content.html
@@ -21,9 +21,20 @@
 	</div>
 
 	<!-- Butik -->
+	<div class="content-animation" ng-show="pageCtrl.isSet(40)" ng-include="'page/butikoversigt.html'">
+	</div>
+
+	<div class="content-animation" ng-show="pageCtrl.isSet(41)" ng-include="'page/opretbutik.html'">
+	</div>
+
 	<div class="content-animation" ng-show="pageCtrl.isSet(44)" ng-include="'page/minbutik.html'">
 	</div>
 
 	<!-- Tags -->
+	<div class="content-animation" ng-show="pageCtrl.isSet(60)" ng-include="'page/tagoversigt.html'">
+	</div>
+
+	<div class="content-animation" ng-show="pageCtrl.isSet(61)" ng-include="'page/oprettag.html'">
+	</div>
 
 </div>
