SweetAlert implementet (not used yet)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<!-- Import bootstrap script -->
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<!-- Import SweetAlert script -->
+		<script src="js/sweet-alert.min.js"></script>
+		<!-- Import SweetAlert stylesheet -->
+		<link rel="stylesheet" type="text/css" href="css/sweet-alert.css">
 		<!-- Import custom styles -->
 		<link href="css/hjelp.css" rel="stylesheet">
 		<link href="css/tilbudoversigt.css" rel="stylesheet">
