Min profil side oprettet

--- a/content.html
+++ b/content.html
@@ -6,6 +6,9 @@
 
 	<div class="content-animation" ng-show="pageCtrl.isSet(2)" ng-include="'page/hjelp.html'">
 	</div>
+
+	<div class="content-animation" ng-show="pageCtrl.isSet(5)" ng-include="'page/minprofil.html'">
+	</div>
 	
 	<!-- Tilbud -->
 	<div class="content-animation" ng-show="pageCtrl.isSet(20)" ng-include="'page/tilbudoversigt.html'">
