--- a/content.html
+++ b/content.html
@@ -30,6 +30,9 @@
 	<div class="content-animation" ng-show="pageCtrl.isSet(41)" ng-include="'page/opretbutik.html'">
 	</div>
 
+	<div class="content-animation" ng-show="pageCtrl.isSet(42)" ng-include="'page/redigerbutik.html'">
+	</div>
+
 	<div class="content-animation" ng-show="pageCtrl.isSet(44)" ng-include="'page/minbutik.html'">
 	</div>
 
@@ -38,6 +41,9 @@
 	</div>
 
 	<div class="content-animation" ng-show="pageCtrl.isSet(61)" ng-include="'page/oprettag.html'">
+	</div>
+
+	<div class="content-animation" ng-show="pageCtrl.isSet(62)" ng-include="'page/redigertag.html'">
 	</div>
 
 </div>
