--- a/index.html
+++ b/index.html
@@ -1,32 +1,53 @@
 <!DOCTYPE html>
 <html ng-app="app">
 	<head>
+		
+		<!-- Set title -->
 		<title>Bootstrap with Angular example</title>
+
+		<!-- Set charset -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
 		<!-- Import AngularJS -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+		
 		<!-- Import AngularJS Animate -->
 		<script type="text/javascript" src="js/angular-animate.min.js"></script>
+		
 		<!-- Import bootstrap stylesheet -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+		
 		<!-- Import bootstrap theme -->
 		<link href="css/theme.css" rel="stylesheet">
+		
 		<!-- Import jquery -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		
 		<!-- Import bootstrap script -->
 		<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		
 		<!-- Import SweetAlert script -->
 		<script type="text/javascript" src="js/sweet-alert.min.js"></script>
+		
 		<!-- Import SweetAlert stylesheet -->
 		<link rel="stylesheet" type="text/css" href="css/sweet-alert.css">
+		
 		<!-- Import ngSweetAlert script -->
 		<script type="text/javascript" src="js/ngSweetAlert.js"></script>
+
+		<!-- Import angularStrap -->
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
+
+		<!-- #### CUSTOM STUFF #### -->
+		
 		<!-- Import AngularJS application -->
-		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="js/app/app.js"></script>
+		
 		<!-- Import custom styles -->
-		<link href="css/hjelp.css" rel="stylesheet">
-		<link href="css/tilbudoversigt.css" rel="stylesheet">
-		<link href="css/styles.css" rel="stylesheet">
+		<link href="css/custom/hjelp.css" rel="stylesheet">
+		<link href="css/custom/tilbudoversigt.css" rel="stylesheet">
+		<link href="css/custom/styles.css" rel="stylesheet">
 	</head>
 	<body class="well" ng-controller="PageController as pageCtrl">
 		<!-- Navigation -->
