--- a/content.html
+++ b/content.html
@@ -9,6 +9,9 @@
 
 	<div class="content-animation" ng-show="pageCtrl.isSet(5)" ng-include="'page/minprofil.html'">
 	</div>
+
+	<div class="content-animation" ng-show="pageCtrl.isSet(900)" ng-include="'page/test.html'">
+	</div>
 	
 	<!-- Tilbud -->
 	<div class="content-animation" ng-show="pageCtrl.isSet(20)" ng-include="'page/tilbudoversigt.html'">
