--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<!-- Set charset -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
+		<!-- Import jquery -->
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 		<!-- Import AngularJS -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
 		
@@ -16,12 +19,6 @@
 		
 		<!-- Import bootstrap stylesheet -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-		
-		<!-- Import bootstrap theme -->
-		<link href="css/theme.css" rel="stylesheet">
-		
-		<!-- Import jquery -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		
 		<!-- Import bootstrap script -->
 		<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -35,9 +32,12 @@
 		<!-- Import ngSweetAlert script -->
 		<script type="text/javascript" src="js/ngSweetAlert.js"></script>
 
-		<!-- Import angularStrap -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/angular-strap/2.1.2/angular-strap.tpl.min.js"></script>
+		<!-- Fuel UX -->
+		<link href="//www.fuelcdn.com/fuelux/3.2.1/css/fuelux.min.css" rel="stylesheet">
+		<script src="//www.fuelcdn.com/fuelux/3.2.1/js/fuelux.min.js"></script>
+
+		<!-- Import bootstrap theme -->
+		<link href="css/theme.css" rel="stylesheet">
 
 		<!-- #### CUSTOM STUFF #### -->
 		
@@ -45,6 +45,7 @@
 		<script type="text/javascript" src="js/app/app.js"></script>
 		
 		<!-- Import custom styles -->
+
 		<link href="css/custom/hjelp.css" rel="stylesheet">
 		<link href="css/custom/tilbudoversigt.css" rel="stylesheet">
 		<link href="css/custom/styles.css" rel="stylesheet">
