--- a/navigation.html
+++ b/navigation.html
@@ -56,6 +56,9 @@
 			<li ng-class="{ active: pageCtrl.isSet(2)}">
 				<a href ng-click="pageCtrl.setPage(2)">Hjælp</a></li>
 
+				<li ng-class="{ active: pageCtrl.isSet(900)}">
+				<a href ng-click="pageCtrl.setPage(900)">Test side</a></li>
+
 			<li ng-class="{ active: pageCtrl.isSet(3)}">
 				<a href ng-click="pageCtrl.setPage(3)"><span class="glyphicon glyphicon-log-out"></span></a></li>
 
