--- a/content.html
+++ b/content.html
@@ -7,6 +7,9 @@
 	<div class="content-animation" ng-show="pageCtrl.isSet(2)" ng-include="'page/hjelp.html'">
 	</div>
 
+	<div class="content-animation" ng-show="pageCtrl.isSet(4)" ng-include="'page/login.html'">
+	</div>
+
 	<div class="content-animation" ng-show="pageCtrl.isSet(5)" ng-include="'page/minprofil.html'">
 	</div>
 
