UserStoreService on the way xD

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		<script type="text/javascript" src="application/services/sessionService.js"></script>
 		<script type="text/javascript" src="application/services/sqlService.js"></script>
 		<script type="text/javascript" src="application/services/authService.js"></script>
+		<script type="text/javascript" src="application/services/userStoreService.js"></script>
 		<script type="text/javascript" src="application/controllers/stateController.js"></script>
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
