Not like I forgot anything

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<script type="text/javascript" src="application/services/authService.js"></script>
 		<script type="text/javascript" src="application/services/userStoreService.js"></script>
 		<script type="text/javascript" src="application/services/saleService.js"></script>
+		<script type="text/javascript" src="application/services/tagService.js"></script>
 		<script type="text/javascript" src="application/controllers/stateController.js"></script>
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
