--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 		<script type="text/javascript" src="application/services/userStoreService.js"></script>
 		<script type="text/javascript" src="application/services/saleService.js"></script>
 		<script type="text/javascript" src="application/services/tagService.js"></script>
+		<script type="text/javascript" src="application/services/idService.js"></script>
 		<script type="text/javascript" src="application/controllers/stateController.js"></script>
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
+		<script type="text/javascript" src="application/runs/loadRegisterServices.js"></script>
 		
 		<!-- Custom styles -->
 		<link href="css/custom/styles.css" rel="stylesheet">
