--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<script type="text/javascript" src="application/controllers/stateController.js"></script>
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
+		<script type="text/javascript" src="application/controllers/opretButikController.js"></script>
 		<script type="text/javascript" src="application/runs/loadRegisterServices.js"></script>
 		
 		<!-- Custom styles -->
