--- a/pages/opretbutik.html
+++ b/pages/opretbutik.html
@@ -1,90 +1,90 @@
 <div class="container panel panel-default" style="text-align: center">
 	<br/>
 	<div class="panel-body">
-		<form class="form-horizontal">
-		  <fieldset>
-			<legend>Butik</legend>
-			<div class="form-group">
-			  <label for="inputName" class="col-lg-2  col-lg-offset-1 control-label">Navn</label>
-			  <div class="col-lg-6">
-				<input class="form-control" id="inputName" placeholder="Netto" type="text">
-			  </div>
-			</div>
-			<div class="form-group">
-			  <label for="inputBeskrivelse" class="col-lg-2  col-lg-offset-1 control-label">Beskrivelse</label>
-			  <div class="col-lg-6">
-				<textarea class="form-control" rows="3" id="inputBeskrivelse"></textarea>
-			  </div>
-			</div>
-			<div class="form-group">
-			  <label for="inputAdress" class="col-lg-2  col-lg-offset-1 control-label">Adresse</label>
-			  <div class="col-lg-6">
-				<input class="form-control" id="inputAddress" placeholder="Nallergade 16 7590 Lorteland" type="text">
-			  </div>
-			</div>
-			<div class="form-group">
-			  <label for="inputPhone" class="col-lg-2  col-lg-offset-1 control-label">Telefon</label>
-			  <div class="col-lg-6">
-				<input class="form-control" id="inputPhone" placeholder="+4547594758" type="text">
-			  </div>
-			</div>
-			<div class="container form-group">
-				<label for="inputBilledgalleri" class="col-lg-2  col-lg-offset-1 control-label">Billede</label>
-				<div class="row">
-					<div class="col-md-2">
-						<br/>
-						<br/>
-						<button class="btn btn-primary btn-sm" id="inputBilledgalleri" type="button">Billedgalleri</button>
-						<br/>
-						<br/>
-						<button class="btn btn-primary btn-sm" id="inputUploadBillede" type="button">Upload</button>
-					</div>
-					<div class="col-md-3">
-						<img src="http://i.imgur.com/ICNFlVA.png" alt="Silly Peasants" style="width:304px;height:228px" class="img-thumbnail">
+		<form class="form-horizontal" name="createForm" novalidate ng-submit="create()">
+			<fieldset>
+				<legend>Butik</legend>
+				<div class="form-group" ng-class="{'has-error' : createForm.storeName.$invalid && createForm.storeName.$dirty}">
+					<label for="inputName" class="col-lg-2  col-lg-offset-1 control-label">Navn *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputName" name="storeName" ng-model="store.name" placeholder="Netto" type="text" required>
 					</div>
 				</div>
-			</div>
-			<br/>
-			<legend>Bruger</legend>
-			<div class="form-group">
-			  <label for="inputBrugernavn" class="col-lg-2  col-lg-offset-1 control-label">Brugernavn</label>
-			  <div class="col-lg-6">
-				<input class="form-control" id="inputBrugernavn" placeholder="Netto3216" type="text">
-			  </div>
-			</div>
-			<div class="form-group">
-			  <label for="inputAdgangskode" class="col-lg-2  col-lg-offset-1 control-label">Adgangskode</label>
-			  <div class="col-lg-6">
-				<input class="form-control" id="inputAdgangskode" placeholder="*********" type="text">
-			  </div>
-			</div>
-			<div class="form-group">
-			  <label for="inputAdgangskodeIgen" class="col-lg-2  col-lg-offset-1 control-label"></label>
-			  <div class="col-lg-6">
-				<input class="form-control" id="inputAdgangskodeIgen" placeholder="Igen" type="text">
-			  </div>
-			</div>
-			<div class="form-group">
-			  <label for="inputTelefon" class="col-lg-2  col-lg-offset-1 control-label">Telefon</label>
-			  <div class="col-lg-6">
-			  	<div class="input-group">
-			  		<span class="input-group-addon">+45</span>
-					<input class="form-control" id="inputTelefon" placeholder="47594758" type="text">
+				<div class="form-group" ng-class="{'has-error' : createForm.storeDescription.$invalid && createForm.storeDescription.$dirty}">
+					<label for="inputBeskrivelse" class="col-lg-2  col-lg-offset-1 control-label">Beskrivelse *</label>
+					<div class="col-lg-6">
+						<textarea class="form-control" rows="3" id="inputBeskrivelse" name="storeDescription" ng-model="store.description" required></textarea>
+					</div>
 				</div>
-			  </div>
-			</div>
-			<div class="form-group">
-			  <label for="inputEmail" class="col-lg-2  col-lg-offset-1 control-label">E-mail</label>
-			  <div class="col-lg-6">
-			  	<div class="input-group">
-			  		<span class="input-group-addon">@</span>
-					<input class="form-control" id="inputEmail" placeholder="mail@mail.dk" type="text">
+				<div class="form-group" ng-class="{'has-error' : createForm.storeAddress.$invalid && createForm.storeAddress.$dirty}">
+					<label for="inputAddress" class="col-lg-2  col-lg-offset-1 control-label">Adresse *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputAddress" name="storeAddress" ng-model="store.address" placeholder="Nallergade 16 7590 Lorteland" type="text" required>
+					</div>
 				</div>
-			  </div>
-			</div>
-			<br/>
-			<button class="btn btn-success" id="inputUploadBillede" type="button">Opret butik</button>
-		  </fieldset>
+				<div class="form-group" ng-class="{'has-error' : createForm.storePhone.$invalid && createForm.storePhone.$dirty}">
+					<label for="inputPhone" class="col-lg-2  col-lg-offset-1 control-label">Telefon *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputPhone" name="storePhone" ng-model="store.phone" placeholder="+4547594758" type="text" required>
+					</div>
+				</div>
+				<div class="container form-group">
+					<label for="inputBilledgalleri" class="col-lg-2  col-lg-offset-1 control-label">Billede</label>
+					<div class="row">
+						<div class="col-md-2">
+							<br/>
+							<br/>
+							<button class="btn btn-primary btn-sm" id="inputBilledgalleri" type="button">Billedgalleri</button>
+							<br/>
+							<br/>
+							<button class="btn btn-primary btn-sm" id="inputUploadBillede" type="button">Upload</button>
+						</div>
+						<div class="col-md-3">
+							<img src="http://i.imgur.com/ICNFlVA.png" alt="Silly Peasants" style="width:304px;height:228px" class="img-thumbnail">
+						</div>
+					</div>
+				</div>
+				<br/>
+				<legend>Bruger</legend>
+				<div class="form-group" ng-class="{'has-error' : createForm.userName.$invalid && createForm.userName.$dirty}">
+					<label for="inputName" class="col-lg-2  col-lg-offset-1 control-label">Navn *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputName" name="userName" ng-model="user.name" placeholder="Netto" type="text" required>
+					</div>
+				</div>
+				<div class="form-group" ng-class="{'has-error' : createForm.userUsername.$invalid && createForm.userUsername.$dirty}">
+					<label for="inputBrugernavn" class="col-lg-2  col-lg-offset-1 control-label">Brugernavn *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputBrugernavn" name="userUsername" ng-model="user.username" placeholder="Netto3216" type="text" required>
+					</div>
+				</div>
+				<div class="form-group" ng-class="{'has-error' : createForm.userPassword.$invalid && createForm.userPassword.$dirty}">
+					<label for="inputAdgangskode" class="col-lg-2  col-lg-offset-1 control-label">Adgangskode *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputAdgangskode" name="userPassword" ng-model="user.password" placeholder="*********" type="text" required>
+					</div>
+				</div>
+				<div class="form-group" ng-class="{'has-error' : createForm.userPasswordAgain.$invalid && createForm.userPasswordAgain.$dirty}">
+					<label for="inputAdgangskodeIgen" class="col-lg-2  col-lg-offset-1 control-label">*</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputAdgangskodeIgen" name="userPasswordAgain" ng-model="user.passwordAgain" placeholder="Igen" type="text" required>
+					</div>
+				</div>
+				<div class="form-group" ng-class="{'has-error' : createForm.userPhone.$invalid && createForm.userPhone.$dirty}">
+					<label for="inputTelefon" class="col-lg-2  col-lg-offset-1 control-label">Telefon *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputTelefon" name="userPhone" ng-model="user.phone" placeholder="47594758" type="text" required>
+					</div>
+				</div>
+				<div class="form-group" ng-class="{'has-error' : createForm.userEmail.$invalid && createForm.userEmail.$dirty}">
+					<label for="inputEmail" class="col-lg-2  col-lg-offset-1 control-label">E-mail *</label>
+					<div class="col-lg-6">
+						<input class="form-control" id="inputEmail" name="userEmail" ng-model="user.email" placeholder="mail@mail.dk" type="email" required>
+					</div>
+				</div>
+				<br/>
+				<button class="btn btn-success" id="inputUploadBillede" type="submit">Opret butik</button>
+			</fieldset>
 		</form>		
 	</div>
 </div>
