En helveds masse rettelser.
Nu kommunikere sitet direkte ned i databasen, istedet for at holde
objekterne i rammen, da dette ikke fungerede. Husk det nå i koder op
imod.

Spørg hvis der er noget i ikke forstår

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 		<!-- ngCookies -->
 		<script type="text/javascript" src="bower_components/angular-cookies/angular-cookies.min.js"></script>
 
+		<!-- Ladda-bootstrap -->
+		<link rel="stylesheet" href="bower_components/ladda-bootstrap/dist/ladda-themeless.css">
+		<script type="text/javascript" src="bower_components/ladda-bootstrap/dist/spin.js"></script>
+		<script type="text/javascript" src="bower_components/ladda-bootstrap/dist/ladda.js"></script>
+
 		<!-- Bootswatch theme (Flatly) -->
 		<link href="css/theme.css" rel="stylesheet">
 		
@@ -43,7 +48,6 @@
 		<script type="text/javascript" src="application/runs/userRedirection.js"></script>
 		<script type="text/javascript" src="application/services/sessionService.js"></script>
 		<script type="text/javascript" src="application/services/sqlService.js"></script>
-		<script type="text/javascript" src="application/services/authService.js"></script>
 		<script type="text/javascript" src="application/services/userStoreService.js"></script>
 		<script type="text/javascript" src="application/services/saleService.js"></script>
 		<script type="text/javascript" src="application/services/tagService.js"></script>
@@ -52,7 +56,7 @@
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretButikController.js"></script>
-		<script type="text/javascript" src="application/runs/loadRegisterServices.js"></script>
+		<script type="text/javascript" src="application/runs/loadIdService.js"></script>
 		
 		<!-- Custom styles -->
 		<link href="css/custom/styles.css" rel="stylesheet">
