--- a/pages/opretbutik.html
+++ b/pages/opretbutik.html
@@ -83,8 +83,12 @@
 					</div>
 				</div>
 				<br/>
-				<button class="btn btn-success" id="inputUploadBillede" type="submit">Opret butik</button>
+				<button class="btn btn-success ladda-button" data-style="expand-right" id="buttonCreate" type="submit"><span class="ladda-label">Opret butik</span></button>
 			</fieldset>
 		</form>		
 	</div>
 </div>
+
+<script>
+	
+</script>
