--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretButikController.js"></script>
+		<script type="text/javascript" src="application/controllers/opretTagController.js"></script>
 		<script type="text/javascript" src="application/runs/loadIdService.js"></script>
 		
 		<!-- Custom styles -->
