--- a/pages/oprettag.html
+++ b/pages/oprettag.html
@@ -1,23 +1,23 @@
-<div class="container panel panel-default" style="text-align: center">
+<div class="container panel panel-default" style="text-align: center" >
 	<br/>
 	<div class="panel-body">
-		<form class="form-horizontal">
+		<form class="form-horizontal" name="createTag" ng-submit="create()" novalidate>
 		  <fieldset>
 			<legend>Opret tag</legend>
-			<div class="form-group">
+			<div class="form-group" ng-class="{'has-error' : createTag.tagName.$invalid && createTag.submitted}">
 			  <label for="inputName" class="col-lg-2  col-lg-offset-1 control-label">Navn</label>
 			  <div class="col-lg-6">
-				<input class="form-control" id="inputName" placeholder="F.eks fødevarer" type="text">
+				<input class="form-control" id="inputName" name="tagName" placeholder="F.eks fødevarer" type="text" required ng-model="tag.name">
 			  </div>
 			</div>
-			<div class="form-group">
+			<div class="form-group" ng-class="{'has-error' : createTag.tagDescription.$invalid && createTag.submitted}">
 			  <label for="inputBeskrivelse" class="col-lg-2  col-lg-offset-1 control-label">Beskrivelse</label>
 			  <div class="col-lg-6">
-				<textarea class="form-control" rows="3" id="inputBeskrivelse"></textarea>
+				<textarea class="form-control" rows="3" id="inputBeskrivelse" name="tagDescription" required ng-model="tag.description"></textarea>
 			  </div>
 			</div>			
 			<br/>
-			<button class="btn btn-success" type="button">Opret tag</button>
+			<button class="btn btn-success" type="submit">Opret tag</button>
 		  </fieldset>
 		</form>		
 	</div>
