Tilbudsoversigt virker nu
Så virker tilbudsoversigten, med søgning.
Selve baren med knapperne på siden, er blevet lavet om, og skal også
laves om på alle andre oversigt sider.. kig evt. i koden for at se
hvordan jeg har gjort.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 		<script type="text/javascript" src="application/controllers/opretButikController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretTagController.js"></script>
 		<script type="text/javascript" src="application/controllers/opretTilbudController.js"></script>
+		<script type="text/javascript" src="application/controllers/tilbudOversigtController.js"></script>
 		<script type="text/javascript" src="application/runs/loadIdService.js"></script>
 		
 		<!-- Custom styles -->
