--- a/pages/tilbudoversigt.html
+++ b/pages/tilbudoversigt.html
@@ -1,17 +1,13 @@
 <div class="container panel panel-default">
 	<div class="panel-body">
-		<div class="well">
-			<table>
-				<tr>
-					<td class="bar-cell"><a href ui-sref="tilbud_opret" class="btn btn-default btn-sm">Opret tilbud</a></td>
-					<td class="bar-cell"><a href class="btn btn-default btn-sm">Slet alle udløbne tilbud</a></td>
-					<td>
-						<div class="input-group">
-							<input class="form-control input-sm" type="text" id="searchInput" placeholder="Søg tilbud...">
-						</div>
-					</td>
-				</tr>
-			</table>
+		<div class="navbar">
+			<div class="navbar-form">
+				<button type="button" class="btn btn-default btn-sm" ui-sref="tilbud_opret">Opret tilbud</button>
+				<button type="button" class="btn btn-default btn-sm">Slet udløbne tilbud</button>
+				<div class="form-group">
+					<input type="text" ng-model="searchText" class="form-control input-sm" placeholder="Søg tilbud...">
+				</div>
+			</div>
 		</div>
 		<br>
 		<center>
@@ -29,21 +25,21 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
-							<td>Banan</td>
-							<td>21/10/2014 - 14:00</td>
-							<td>25/10/2014 - 00:00</td>
-							<td>21/10/2014 - 12:00</td>
-							<td>200 kr</td>
+						<tr ng-repeat="sale in sales | filter:searchText">
+							<td>{{sale.name}}</td>
+							<td>{{sale.start}}</td>
+							<td>{{sale.end}}</td>
+							<td>{{sale.publish}}</td>
+							<td>{{sale.price | currency: "kr "}}</td>
 							<td><span class="label label-success">Offentlig</span></td>
 							<td align="right">
 								<a href class="btn btn-info btn-xs">Eksempel</a>
 								<div class="btn-group">
-		  							<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
+									<a href class="btn btn-info btn-xs dropdown-toggle" data-toggle="dropdown">Mere <span class="caret"></span></a>
 									<ul class="dropdown-menu">
-									    <li><a href>Rediger</a></li>
-									    <li><a href>Slet</a></li>
-								  	</ul>
+										<li><a href>Rediger</a></li>
+										<li><a href>Slet</a></li>
+									</ul>
 								</div>
 							</td>
 						</tr>
