--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<script type="text/javascript" src="bower_components/ladda-bootstrap/dist/ladda.js"></script>
 
 		<!-- Bootswatch theme (Flatly) -->
-		<!--<link href="css/theme.css" rel="stylesheet">-->
+		<link href="css/theme.css" rel="stylesheet">
 		
 		<!-- AngularJS application -->
 		<script type="text/javascript" src="application/misc/routes.js"></script>
