--- a/pages/minprofil.html
+++ b/pages/minprofil.html
@@ -1,13 +1,13 @@
-<div id="MinButikMaster" class="container panel panel-default" style="text-align: center">
+<div class="container panel panel-default" style="text-align: center">
 	<br/>
 	<div class="panel-body">
-		<form class="form-horizontal">
+		<form name="profileForm" novalidate class="form-horizontal" ng-submit="save()">
 		  <fieldset>
 			<legend>Min Profil</legend>
 			<div class="form-group">
 			  <label for="inputAdresse" class="col-lg-2  col-lg-offset-1 control-label">Brugernavn</label>
 			  <div class="col-lg-6">
-				<input class="form-control" id="inputAdresse" placeholder="Netto3216" type="text" disabled="">
+				<input class="form-control" id="inputAdresse" ng-model="user.username" placeholder="Netto3216" type="text" disabled="">
 			  </div>
 			</div>
 			<div class="form-group">
@@ -19,23 +19,23 @@
 			<div class="form-group">
 			  <label for="inputNavn" class="col-lg-2  col-lg-offset-1 control-label">Navn</label>
 			  <div class="col-lg-6">
-				<input class="form-control" id="inputButikNavn" placeholder="Birgitte Sørensen" type="text">
+				<input class="form-control" id="inputButikNavn" ng-model="user.name" placeholder="Birgitte Sørensen" type="text" required>
 			  </div>
 			</div>
 			<div class="form-group">
 			  <label for="inputTelefon" class="col-lg-2  col-lg-offset-1 control-label">Telefon</label>
 			  <div class="col-lg-6">
-				<input class="form-control" id="inputTelefon" placeholder="+4547594758" type="text">
+				<input class="form-control" id="inputTelefon" ng-model="user.phone" placeholder="+4547594758" type="text" required>
 			  </div>
 			</div>
 			<div class="form-group">
 			  <label for="inputEmail" class="col-lg-2  col-lg-offset-1 control-label">E-mail</label>
 			  <div class="col-lg-6">
-				<input class="form-control" id="inputEmail" placeholder="mail@mail.dk" type="text">
+				<input class="form-control" id="inputEmail" ng-model="user.email" placeholder="mail@mail.dk" type="text" required>
 			  </div>
 			</div>
 			<br/>
-			<button class="btn btn-success" id="inputGem" type="button">Gem</button>
+			<button class="btn btn-success" id="inputGem" type="submit">Gem</button>
 			<br/>
 			<br/>
 		  </fieldset>
