--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 		<script type="text/javascript" src="application/services/saleService.js"></script>
 		<script type="text/javascript" src="application/services/tagService.js"></script>
 		<script type="text/javascript" src="application/services/idService.js"></script>
+		<script type="text/javascript" src="application/services/storeService.js"></script>
+		<script type="text/javascript" src="application/services/userService.js"></script>
 		<script type="text/javascript" src="application/controllers/stateController.js"></script>
 		<script type="text/javascript" src="application/controllers/loginController.js"></script>
 		<script type="text/javascript" src="application/controllers/defaultController.js"></script>
